Fix card overlap

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,4 +1,8 @@
 .card-container {
+  position: relative;
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
+  z-index: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
