--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -143,7 +143,7 @@ input:checked + .slider:before {
   display: flex;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
-  justify-content: start;
+  justify-content: flex-start;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
